# gradio_tutorial

./: .gitignore  README.md  demo1.py  demo2.py  demo3.py  demo4.py  iris_predictor.py  pyproject.toml
models/: nn.pkl
