[tool.poetry]
name = "gradio-tutorial"
version = "0.1.0"
description = ""
authors = ["kento.furuhashi <kento.furuhashi@cct-inc.co.jp>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "3.9.13"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
mypy = "^1.4.1"
pyproject-flake8 = "^6.0.0.post1"
isort = "^5.12.0"
black = "^23.7.0"
typing-extensions = "^4.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
line-length = 119

max-complexity = 10
select = "C,E,F,W,B"
ignore = "E203,W503,E231,W605"

[tool.black]
line-length = 119
exclude = '''
(
    migrations
    | .mypy_cache
    | .pytest_cache
    | .tox
    | .venv
    | dist
)
'''

[tool.mypy]
# common
python_version = 3.9
show_column_numbers  = true
show_error_context = true
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = true
# warning
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true

[tool.isort]
profile = "black"
line_length = 119